[package]
name = "rusty_mirror"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
icalendar = "0.15.7"
chrono = "0.4.31"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
clap = { version = "4.4.6", features = ["derive"] }
